--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DB_CONNECTION = "mongodb+srv://saireddy1438:saireddy1438@cluster0.i4dqp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_TOKEN_SECRET = saireddy1438
 PORT = 3000
+accountSid = "ACf20844b4dd07a3bf32d3f5ca77294125"
+authToken = "f170b72af16c6882e7f5d71800801d5b"
