--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "Buffer": "^0.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
@@ -23,11 +24,13 @@
     "mongoose": "^8.10.1",
     "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.1.9",
+    "ocr-space-api-wrapper": "^2.3.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "pm2": "^5.4.3",
     "prom-client": "^15.1.3",
+    "request": "^2.88.2",
     "test_bot_backend": "file:",
     "twilio": "^5.4.5"
   }
